components/ocp-pipeline-triggers/el-route-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-simple-pipeline-listener
spec:
  host: el-simple-pipeline-listener-${SUMMIT_PROJECT}.${OCP_APPS_URL}
  path: /
  to:
    kind: Service
    name: el-simple-pipeline-listener
    weight: 100
  port:
    targetPort: https-listener
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
